Improve 2026 compatibility for Windows and modern launcher environments
Co-authored-by: TheCodingSoldier <257933801+TheCodingSoldier@users.noreply.github.com>